Fix Deploy with rollout (immutable tag + draining) - postgres bootup

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -402,28 +402,28 @@ jobs:
             if docker rollout --help >/dev/null 2>&1; then
               echo "Using docker-rollout"
             
-              docker rollout -f docker-compose.yml --env-file /etc/platform/env \
+              docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime \
                 --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" api
             
-              docker rollout -f docker-compose.yml --env-file /etc/platform/env \
+              docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime \
                 --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" web
             
               if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker rollout -f docker-compose.yml --env-file /etc/platform/env background
+                docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime background
               fi
             else
               echo "docker-rollout not found; using docker compose fallback"
             
               # Create/refresh containers with the new immutable tag.
               # Assumes your compose uses: image: ghcr.io/...:${IMAGE_TAG}
-              docker compose --env-file /etc/platform/env pull
+              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime pull
               # Update api first (drain hook supported in your container's preStop or entrypoint)
-              docker compose --env-file /etc/platform/env up -d api
+              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d api
               # Then web
-              docker compose --env-file /etc/platform/env up -d web
+              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d web
               # Optional background
               if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker compose --env-file /etc/platform/env up -d background
+                docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d background
               fi
             fi 
             
