--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -53,6 +53,7 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_MULTIPLE_DATABASES=${POSTGRES_MULTIPLE_DATABASES}
     networks: [net]
     env_file:
       - /etc/platform/env
