--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -30,7 +30,8 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "/var/lib/platform/letsencrypt:/letsencrypt"
-    networks: [net]
+    networks:
+      - net
     env_file:
       - /etc/platform/env
     labels:
@@ -45,16 +46,17 @@ services:
 
   db:
     image: encoredotdev/postgres:15
-    container_name: postgres_db
+    container_name: db
     volumes:
       - /var/lib/platform/postgres:/var/lib/postgresql/data
-      - /opt/platform/scripts/db/pg-init.sh:/docker-entrypoint-initdb.d/10-multi-db.sh:ro
+      - /opt/platform/scripts/db:/docker-entrypoint-initdb.d
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_MULTIPLE_DATABASES=${POSTGRES_MULTIPLE_DATABASES}
-    networks: [net]
+    networks:
+      - net
     env_file:
       - /etc/platform/env
     restart: always
@@ -71,7 +73,8 @@ services:
     container_name: redis
     volumes:
       - /var/lib/platform/redis:/data
-    networks: [net]
+    networks:
+      - net
     restart: always
     healthcheck:
       test: ["CMD", "redis-cli", "--raw", "ping"]
@@ -109,7 +112,8 @@ services:
       - LOGTO_GOOGLE_CLIENT_SECRET=${LOGTO_GOOGLE_CLIENT_SECRET}
     volumes:
       - /opt/platform/scripts/logto/custom-setup:/etc/logto/packages/cli/custom-setup:ro
-    networks: [net]
+    networks:
+      - net
     env_file:
       - /etc/platform/env
     labels:
@@ -149,7 +153,8 @@ services:
       - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    networks: [net]
+    networks:
+      - net
     restart: always
     labels:
       - "traefik.enable=true"
@@ -180,7 +185,8 @@ services:
 #      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
 #      - REDIS_HOST=redis
 #      - REDIS_PORT=6379
-#    networks: [net]
+#    networks:
+#      - net
 #    restart: always
 #    healthcheck:
 #      test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"]
@@ -194,7 +200,8 @@ services:
     depends_on:
       api:
         condition: service_healthy
-    networks: [net]
+    networks:
+      - net
     restart: always
     labels:
       - "traefik.enable=true"
@@ -217,7 +224,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/platform/dozzle:/data
-    networks: [net]
+    networks:
+      - net
     env_file:
       - /etc/platform/env
     environment:
