--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -388,12 +388,15 @@ jobs:
             echo "Pulling ghcr.io/${{ env.IMAGE_NAME }}/api:$SHA_TAG"
             docker pull "ghcr.io/${{ env.IMAGE_NAME }}/api:$SHA_TAG"
             
-            # Build unified env file (static + IMAGE_TAG)
+            # Verify that /etc/platform/env is accessible
             if [ -f /etc/platform/env ]; then
-              cat /etc/platform/env > .env.runtime
+              echo "Confirmed /etc/platform/env is present & available"
+              sed -e 's/=.*/=<redacted>/' /etc/platform/env
             else
               echo "ERROR: /etc/platform/env missing"; exit 1
             fi
+            
+            # Build env file with IMAGE_TAG for proper docker-rollout operation
             echo "IMAGE_TAG=$SHA_TAG" >> .env.runtime
             echo "Wrote .env.runtime:"
             sed -e 's/=.*/=<redacted>/' .env.runtime | sed 's/IMAGE_TAG=<redacted>/IMAGE_TAG='"$SHA_TAG"'/'
@@ -402,28 +405,32 @@ jobs:
             if docker rollout --help >/dev/null 2>&1; then
               echo "Using docker-rollout"
             
-              docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime \
+              docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime \
                 --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 30'" api
             
-              docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime \
+              docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime \
                 --pre-stop-hook "sh -c 'touch /tmp/drain && sleep 20'" web
             
               if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker rollout -f docker-compose.yml --env-file ./etc/platform/env --env-file ./.env.runtime background
+                docker rollout -f docker-compose.yml --env-file /etc/platform/env --env-file ./.env.runtime background
               fi
             else
               echo "docker-rollout not found; using docker compose fallback"
-            
+
               # Create/refresh containers with the new immutable tag.
+            
               # Assumes your compose uses: image: ghcr.io/...:${IMAGE_TAG}
-              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime pull
+              docker compose --env-file /etc/platform/env --env-file ./.env.runtime pull
+            
               # Update api first (drain hook supported in your container's preStop or entrypoint)
-              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d api
+              docker compose --env-file /etc/platform/env --env-file ./.env.runtime up -d api
+            
               # Then web
-              docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d web
+              docker compose --env-file /etc/platform/env --env-file ./.env.runtime up -d web
+            
               # Optional background
               if grep -qE '^[[:space:]]*background:' docker-compose.yml; then
-                docker compose --env-file ./etc/platform/env --env-file ./.env.runtime up -d background
+                docker compose --env-file /etc/platform/env --env-file ./.env.runtime up -d background
               fi
             fi 
             
