--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,9 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_MULTIPLE_DATABASES=${POSTGRES_MULTIPLE_DATABASES}
+      - DB_ADMIN_USER=${DB_ADMIN_USER}
+      - DB_ADMIN_PASSWORD=${DB_ADMIN_PASSWORD}
+      - DB_ADMIN_ACCESS=${DB_ADMIN_ACCESS}
     networks:
       - net
     env_file:
@@ -183,13 +186,13 @@ services:
     logging: *default-logging
 
   pgweb:
-    image: sosedoff/pgweb:0.16
+    image: sosedoff/pgweb:0.16.2
     container_name: pgweb
     restart: always
     ports:
       - "127.0.0.1:8081:8081"
     environment:
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/logto?sslmode=disable
+      - DATABASE_URL=postgres://${DB_ADMIN_USER}:${DB_ADMIN_PASSWORD}@db:5432/${POSTGRES_LOGTO_DB}?sslmode=disable
     depends_on:
       - db
     networks:
