--- a/.env.sample
+++ b/.env.sample
@@ -12,10 +12,15 @@ ACME_EMAIL=your-email@example.com
 # Basic auth for Traefik & Dozzle dashboard. Generate using htpasswd
 # FYI Note: when used in docker-compose.yml all dollar signs in the hash need to be escaped.
 # To create a admin:password pair without prompt, the following command can be used:
+
 # htpasswd -nbB admin password | sed 's/\$/\\$/g'
 # -> admin:\$2y\$05\$Gh.L5rYEJjyq1jm3RC5MdOug4ql1XkcKVD46stn14pQNXsX/44xim
 TRAEFIK_BASIC_AUTH="admin:\$2y\$05\$Gh.L5rYEJjyq1jm3RC5MdOug4ql1XkcKVD46stn14pQNXsX/44xim"
+# htpasswd -nbB admin password | sed 's/\$/\\$/g'
+# -> admin:\$2y\$05\$sae3pQYB7FaIqMNDsF5d0eVH/CuBHtbh8pCkIwq4VzB8.84XiAjHa
 DOZZLE_BASIC_AUTH="admin:\$2y\$05\$sae3pQYB7FaIqMNDsF5d0eVH/CuBHtbh8pCkIwq4VzB8.84XiAjHa"
+# htpasswd -nbB admin password | sed 's/\$/\\$/g'
+# -> admin:\$2y\$05\$8I1D2yYsQvrAaSr5ZTJZnO/HGfT5jU7RT4GgCaN/prWQl55Osvxhq
 PGWEB_BASIC_AUTH="admin:\$2y\$05\$8I1D2yYsQvrAaSr5ZTJZnO/HGfT5jU7RT4GgCaN/prWQl55Osvxhq"
 
 # Domains
