Disable api health check

--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -231,7 +231,8 @@ services:
       - "traefik.http.services.app.loadbalancer.server.port=8080"
     stop_grace_period: 60s
     healthcheck:
-      test: ["CMD-SHELL", "test -f /tmp/drain && exit 1; wget -qO- http://localhost:8080/health >/dev/null 2>&1 || exit 1"]
+      test: ["CMD", "true"]
+#      test: ["CMD-SHELL", "test -f /tmp/drain && exit 1; wget -qO- http://localhost:8080/health >/dev/null 2>&1 || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 3
