--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -286,7 +286,8 @@ services:
       - "traefik.http.services.web.loadbalancer.server.port=3001"
     stop_grace_period: 45s
     healthcheck:
-      test: ["CMD-SHELL", "test -f /tmp/drain && exit 1; wget -qO- http://localhost:3001/health >/dev/null 2>&1 || exit 1"]
+#      test: ["CMD", "true"]
+      test: ["CMD-SHELL", "wget -q -O - http://127.0.0.1:80/ >/dev/null 2>&1"]
       interval: 5s
       timeout: 3s
       retries: 3
